# earnscore

./: .gitignore  AGENTS.md  Cargo.toml  gp
.agent/: requirement.md
.ai-agent/: AGENTS.md  MANIFEST.sha256
.ai-agent/ai-plan/: context.md  draft-plan.md  overview.md  revised-plan.md
.ai-agent/config/: USER_ENV_EXAMPLES_TH.md  default.env  user.env  user.env.example  user.env.old
.ai-agent/prompts/: coder-once.prompt.md  planner-start.prompt.md  reviewer-fast.prompt.md  reviewer-final.prompt.md
.ai-agent/scripts/: agent-agy-adapter-test.sh  agent-blank-project-test.sh  agent-codegraph.sh  agent-codex-retry.sh  agent-config-examples-test.sh  agent-context-build.sh  agent-context-package.sh  agent-final-fail-mode-test.sh  agent-flow-smoke-test.sh  agent-knowledge-scan.sh  agent-load-env.sh  agent-loop-all-tasks.sh  agent-loop-current-task.sh  agent-monitor.sh  agent-output-pipeline-test.sh  agent-output-pipeline.py  agent-parser-regression-test.sh  agent-persistent-session-test.sh  agent-planner-grill-format-test.sh  agent-planner-grill.sh  agent-progress.sh  agent-reset-runtime.sh  agent-restart-test.sh  agent-scope-guard.sh  agent-status.sh  agent-task-size.sh  agent-token-accounting.py  agent-validation.sh  planner-freeze-plan.sh  planner-grill-next.sh  planner-grill-start.sh  update-manifest.sh
dashboard/: package-lock.json  package.json  schema.sql  wrangler.toml
dashboard/src/: index.js
docs/: architecture.md  assets-and-storage.md  chrome-and-feed-operations.md  database-er.md  migration-and-rollback.md  recovery-and-finalization.md
src/: main.rs
(+75 files in other folders)
